<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register"
        android:id="@+id/register"
        android:background="@drawable/background_new">

    <EditText
            android:padding="3dp"
            android:hint="     Email"
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_register"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/input_background"
            android:layout_marginLeft="114dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="156dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="104dp" android:layout_marginRight="104dp" android:autofillHints=""
            tools:ignore="LabelFor"/>
    <EditText
            android:padding="3dp"
            android:hint="     Password"
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_register"
            android:background="@drawable/input_background"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="114dp"
            android:layout_marginStart="104dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/email_register" android:autofillHints="" tools:ignore="LabelFor"/>
    <EditText
            android:padding="3dp"
            android:hint="     Confirm Password"
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/input_background"
            android:id="@+id/confirm_password_register"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="114dp"
            android:layout_marginStart="104dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/password_register" android:autofillHints=""
            tools:ignore="LabelFor"/>

    <Button
            android:text="@string/register"
            android:layout_width="102dp"
            android:layout_height="41dp"
            android:id="@+id/button_register"
            android:background="@drawable/button_register_back"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_register"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="158dp"
            android:layout_marginStart="158dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="167dp"
            android:layout_marginRight="167dp"
            app:layout_constraintHorizontal_bias="0.25"/>
    <Button
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="53dp"
            android:layout_height="46dp"
            android:id="@+id/backButton" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/join_our_community"
            android:textSize="30dp"
            android:layout_width="280dp"
            android:layout_height="51dp" android:id="@+id/textView" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/backButton"
            android:layout_marginLeft="64dp" android:layout_marginTop="64dp" android:layout_marginStart="64dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>